--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,17 @@
   box-sizing: border-box;
   font-family: 'Times New Roman', Times, serif;
 }
+::-webkit-scrollbar {
+  width: 4px;
+  border: 1px solid #d5d5d5;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 0;
+  background: #eeeeee;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 0;
+  background: #b0b0b0;
+}
