--- a/src/layouts/Header/Header.css
+++ b/src/layouts/Header/Header.css
@@ -1,10 +1,12 @@
 .header {
   display: flex;
   flex-direction: row;
-  background-color: rgb(0, 0, 0);
-  color: white;
   justify-content: space-between;
   align-items: center;
-  height: 15vh;
+  height: 10vh;
   font-size: 3vw;
+}
+.navbar-logo{
+  width: 30px;
+  height: 30px;
 }
