--- a/src/components/Home/Module1/Carrousel.css
+++ b/src/components/Home/Module1/Carrousel.css
@@ -1,14 +1,8 @@
 .home-module-carrousel{
-    height: 100vh;
+    height: 100%;
     width: 100%;
-    object-fit: contain;
 }
-.home-module-carrousel-image{
+.carrousel-container{
+    height: 65vh;
     width: 100%;
-    object-fit: cover;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-    object-position: center;
 }
