--- a/src/components/Home/Module2/TopArtist.css
+++ b/src/components/Home/Module2/TopArtist.css
@@ -1,11 +1,13 @@
 .module2-artist-container{
-    height: 40vh;
+    height: auto;
     background-color: rgb(25, 25, 25);
     display: flex;
     flex-direction: column;
+    padding-bottom: 10px;
 }
 .module2-cards-artist{
     display: flex;
+    justify-content: center;
     background-color: rgba(0, 0, 0, 0);
     padding-left: 10px;
     gap: 1rem;
@@ -16,7 +18,6 @@
     font-size: 30px;
     font-weight: bold;
     padding-left: 15px;
-    padding-top: 35px;
 }
 .module2-cards{
     display: flex;
