--- a/src/components/Home/Module3/PopularArtist.css
+++ b/src/components/Home/Module3/PopularArtist.css
@@ -1,5 +1,5 @@
 .module2-artist-container{
-    height: 40vh;
+    height: auto;
     background-color: rgb(25, 25, 25);
     display: flex;
     flex-direction: column;
@@ -29,7 +29,7 @@
     box-shadow: 4px 4px 4px black;
 }
 .module2-cards-image{
-    width: 145.5px;
+     width: 145.5px;
     height: 145.5px;
 }
 .module2-cards-overlay{
@@ -49,9 +49,7 @@
     align-items: center;
     background-color: rgb(25, 25, 25);
     height: 50px;
-    padding-top: 75px;
     flex-grow: 1;
-    padding-right: 40px;
 }
 .module2-btn-artist-text{
     background-color: rgb(25, 25, 25);
