--- a/src/layouts/Footer/Footer.css
+++ b/src/layouts/Footer/Footer.css
@@ -1,10 +1,107 @@
 .footer {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
   background-color: rgb(0, 0, 0);
   color: white;
-  height: 25vh;
+  height: auto;
   font-size: 30px;
+}
+.columns-footer{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+.footer-col-1{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+  width: 33.3%;
+  padding-top: 10px;
+  color: white;
+}
+.footer-col-2{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+  width: 33.3%;
+  padding-top: 10px;
+  color: white;
+}
+.footer-col-3{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+  width: 33.3%;
+  padding-top: 10px;
+  color:white;
+}
+.footer-second-line{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  background-color: rgb(0, 0, 0);
+  color: white;
+  height: auto;
+  font-size: 30px;
+}
+.hr-footer-color-grey{
+  border: 3px solid rgb(108, 108, 108);
+  width: 100%;
+}
+.footer-social-btns{
+  display: flex;
+  font-size: 60px;
+  background-color: rgb(0, 0, 0);
+  color: white;
+  height: auto;
+  font-size: 30px;
+}
+.footer-social-text{
+  font-size: 34px;
+  padding-left: 10px;
+}
+.container-btns-footer{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 2rem;
+  align-items: center;
+  width: 100%;
+  padding: 20px;
+  flex-wrap: wrap;
+  border: none;
+  
+}
+
+.footer-ul{
+  list-style-type: none;
+}
+.footer-li{
+  font-size: 17px;
+}
+.sponsor-btn-footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(0, 0, 0);
+  height: 50px;
+  width: 180px;
+  border: 2px solid rgb(238, 238, 238);
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+}
+.sponsor-btn-footer:hover{
+  background-color: rgb(238, 238, 238);
+  color: black;
 }
