--- a/src/index.css
+++ b/src/index.css
@@ -8,21 +8,6 @@
   --main-color: rgb(159, 0, 255);
   --main-color-dark: hsl(277, 100%, 35%);
 }
-.text-main {
-  color: var(--main-color);
-}
-.bg-main {
-  background: var(--main-color)
-}
-
-.btn-main {
-  background-color: var(--main-color);
-  color: white;
-}
-.btn-main:hover {
-  background-color: var(--main-color-dark);
-  color: white;
-}
 
 
 ::-webkit-scrollbar {
@@ -38,4 +23,33 @@
 ::-webkit-scrollbar-thumb {
   border-radius: 0;
   background: #b0b0b0;
+}
+/* Clases con color principal para background y texto*/
+.bg-main {
+  background: var(--main-color)
+}
+
+.text-main {
+  color: var(--main-color);
+}
+
+/* Variante, se puede utilizar de la siguiente forma con el button de bootstrap
+  <Button variant="main"></Button>
+*/
+.btn-main {
+  background-color: var(--main-color);
+  color: white;
+}
+.btn-main:hover {
+  background-color: var(--main-color-dark);
+  color: white;
+}
+
+/* Estilos generales de input */
+input {
+  padding: 3px 5px;
+  font-size: 16px;
+  width: 100%;
+  border: 1px solid rgb(175, 170, 170);
+  border-radius: 4px;
 }
