--- a/src/index.css
+++ b/src/index.css
@@ -46,10 +46,22 @@
 }
 
 /* Estilos generales de input */
-input {
+input, textarea {
   padding: 3px 5px;
   font-size: 16px;
   width: 100%;
   border: 1px solid rgb(175, 170, 170);
   border-radius: 4px;
+  margin-bottom: 10px;
+}
+label {
+  margin-bottom: 4px;
+}
+
+select {
+  padding: 3px 10px;
+  font-size: 16px;
+  border: 1px solid rgb(175, 170, 170);
+  border-radius: 4px;
+  margin-bottom: 10px;
 }
