--- a/src/index.css
+++ b/src/index.css
@@ -15,16 +15,20 @@
 }
 
 ::-webkit-scrollbar {
-  width: 4px;
-  border: 1px solid #d5d5d5;
+  width: 6px;
+  border: 2px solid #C26CFF;
 }
 
 ::-webkit-scrollbar-track {
   border-radius: 0;
-  background: #eeeeee;
+  background: #2f2f2f;;
 }
 
 ::-webkit-scrollbar-thumb {
   border-radius: 0;
-  background: #b0b0b0;
+  background: #a220ff;;
+}
+::-webkit-scrollbar-thumb:hover {
+  border-radius: 0;
+  background: #C26CFF;
 }
