--- a/src/layouts/Footer/Footer.css
+++ b/src/layouts/Footer/Footer.css
@@ -60,14 +60,14 @@
 }
 .footer-social-btns{
   display: flex;
-  font-size: 60px;
-  background-color: rgb(0, 0, 0);
+  border: none;
+  border-color: rgba(255, 255, 255, 0);
+  background-color: rgba(0, 0, 0, 0);
   color: white;
-  height: auto;
-  font-size: 30px;
+  border-radius: 50%;
 }
 .footer-social-text{
-  font-size: 34px;
+  font-size: 24px;
   padding-left: 10px;
 }
 .container-btns-footer{
@@ -82,7 +82,10 @@
   border: none;
   
 }
-
+.img-footer{
+  width: 80px;
+  height: 65px;
+}
 .footer-ul{
   list-style-type: none;
 }
@@ -93,9 +96,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(0, 0, 0);
-  height: 50px;
-  width: 180px;
+  background-color: rgb(255, 255, 255);
+  width: 90px;
+  height: 70px;
   border: 2px solid rgb(238, 238, 238);
   color: white;
   font-size: 20px;
@@ -103,5 +106,5 @@
 }
 .sponsor-btn-footer:hover{
   background-color: rgb(238, 238, 238);
-  color: black;
+  filter:drop-shadow(0 0 1rem var(--main-color));
 }
