--- a/src/layouts/Footer/Footer.css
+++ b/src/layouts/Footer/Footer.css
@@ -52,10 +52,9 @@
   background-color: rgb(0, 0, 0);
   color: white;
   height: auto;
-  font-size: 30px;
 }
 .hr-footer-color-grey{
-  border: 3px solid rgb(108, 108, 108);
+  border: 2px solid rgb(108, 108, 108);
   width: 100%;
 }
 .footer-social-btns{
@@ -67,8 +66,9 @@
   border-radius: 50%;
 }
 .footer-social-text{
-  font-size: 24px;
+  font-size: 18px;
   padding-left: 10px;
+  margin-top: 10px;
 }
 .container-btns-footer{
   display: flex;
@@ -80,7 +80,6 @@
   padding: 20px;
   flex-wrap: wrap;
   border: none;
-  
 }
 .img-footer{
   width: 80px;
@@ -90,7 +89,7 @@
   list-style-type: none;
 }
 .footer-li{
-  font-size: 17px;
+  font-size: 14px;
 }
 .sponsor-btn-footer{
   display: flex;
@@ -101,10 +100,27 @@
   height: 70px;
   border: 2px solid rgb(238, 238, 238);
   color: white;
-  font-size: 20px;
   font-weight: bold;
 }
 .sponsor-btn-footer:hover{
   background-color: rgb(238, 238, 238);
   filter:drop-shadow(0 0 1rem var(--main-color));
+}
+.footer-title-navg{
+  font-size: 16px;
+  font-weight: bold;
+  color: var(--main-color)
+}
+.footer-about-us{
+  font-size: 14px;
+  color: white;
+  width: 45%;
+}
+.other-titles-footer{
+  font-size: 24px;
+  font-weight: bold;
+}
+.footer-text{
+  font-size: 14px;
+  color: white;
 }
