--- a/src/layouts/Header/Navbar-BS/NavbarBS.css
+++ b/src/layouts/Header/Navbar-BS/NavbarBS.css
@@ -6,6 +6,14 @@
     flex-grow: 1;
     justify-content: flex-end!important;
 }
+.nav-btn{
+    margin-left: 10px;
+    padding: 0px;
+    padding-top:7px;
+    text-decoration: none;
+    color: black;
+    text-transform: uppercase;
+}
 .nav-flex0{
     display: flex!important;
     flex-grow: 1!important;
