--- a/src/layouts/Footer/Footer.css
+++ b/src/layouts/Footer/Footer.css
@@ -7,6 +7,7 @@
   color: white;
   height: auto;
   font-size: 30px;
+  padding: .5em 0 .5em 0;
 }
 .columns-footer{
   display: flex;
@@ -36,7 +37,7 @@
 .footer-col-3{
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   height: 100%;
   width: 33.3%;
@@ -66,7 +67,7 @@
   border-radius: 50%;
 }
 .footer-social-text{
-  font-size: 18px;
+  font-size: 1rem;
   padding-left: 10px;
   margin-top: 10px;
 }
@@ -87,9 +88,19 @@
 }
 .footer-ul{
   list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 0;
+  padding-top: .5em;
+  gap: .5em;
 }
 .footer-li{
-  font-size: 14px;
+  font-size: 1rem;
+}
+.footer-li:hover{
+  border-bottom: 3px solid var(--main-color);
+  cursor: pointer;
 }
 .sponsor-btn-footer{
   display: flex;
