--- a/src/layouts/Header/Navbar-BS/NavbarBS.css
+++ b/src/layouts/Header/Navbar-BS/NavbarBS.css
@@ -1,19 +1,33 @@
 .nav-flex2{
     display: flex!important;
+    align-items: center;
 }
 .nav-flex1{
     display: flex!important;
     flex-grow: 1;
     justify-content: flex-end!important;
+    align-items: center;
 }
+
 .nav-btn{
-    margin-left: 10px;
-    padding: 0px;
-    padding-top:7px;
     text-decoration: none;
+    padding: 5px 1rem;
+    margin: 0 10px;
     color: black;
-    text-transform: uppercase;
+    position: relative;
 }
+
+.nav-btn:hover{
+    color: var(--main-color);
+    transform: scale(1.2);
+    border-bottom: 2px solid var(--main-color);
+    transition: all .3s ease-in-out
+}
+
+.nav-btn-cart:hover{
+    transform: scale(1.2);
+}
+
 .nav-flex0{
     display: flex!important;
     flex-grow: 1!important;
@@ -28,6 +42,18 @@
     margin-left: 10px;
     padding-top:7px;
 }
+
+.logo-redirect-nav{
+    margin-left: 10px;
+    padding: 0px;
+    padding-top:7px;
+    text-decoration: none;
+    color: rgb(35, 35, 35);
+}
+.logo-redirect-nav:hover{
+    color: var(--main-color);
+}
+
 @media screen and (max-width: 990px){
    .register{
     border: none!important;
