--- a/src/components/Home/Module2/TopArtist.css
+++ b/src/components/Home/Module2/TopArtist.css
@@ -3,21 +3,26 @@
     background-color: rgb(25, 25, 25);
     display: flex;
     flex-direction: column;
+    align-items: center;
     padding-bottom: 10px;
+    padding-top: 20px;
+    gap: 2em;
 }
 .module2-cards-artist{
     display: flex;
     justify-content: center;
     background-color: rgba(0, 0, 0, 0);
-    padding-left: 10px;
     gap: 1rem;
     text-shadow: 4px 4px 4px black;
+    flex-wrap: wrap;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 .module2-h2{
     color: white;
     font-size: 30px;
     font-weight: bold;
-    padding-left: 15px;
+    text-align: center;
 }
 .module2-cards{
     display: flex;
@@ -45,14 +50,13 @@
 }
 .module2-btn-artist{
     display: flex;
-    justify-content: flex-end;
+    width: 100%;
+    justify-content: center;
     align-items: center;
     background-color: rgb(25, 25, 25);
-    height: 50px;
     padding-top: 75px;
-    flex-grow: 1;
-    padding-right: 40px;
 }
+
 .module2-btn-artist-text{
     background-color: rgb(25, 25, 25);
     height: 50px;
