--- a/src/pages/ArtistDetail/ArtistDetail.css
+++ b/src/pages/ArtistDetail/ArtistDetail.css
@@ -6,7 +6,15 @@
    background-blend-mode: color;
    width: 100%;
 }
-
+.concert-link{
+   color: aliceblue;
+}
+.concert-link:hover{
+   cursor: pointer;
+   color: var(--main-color);
+   transform: scale(1.1);
+   transition: .5s;
+}
 .genre__key {
    text-decoration: underline;
    font-weight: 600;
@@ -16,7 +24,7 @@
    display: flex;
    justify-content: center;
    align-items: flex-end;
-   height: 100%;
+   height: 80%;
    padding-bottom: 1em;
    font-size: 4rem;
    text-shadow: 3px 0px 0px rgba(0,0,0,1);
