--- a/src/layouts/Header/Navbar-BS/NavbarBS.css
+++ b/src/layouts/Header/Navbar-BS/NavbarBS.css
@@ -7,8 +7,16 @@
     display: flex;
     width: 100%;
     padding: 30px;
-    position: absolute;
     z-index: 10;
+}
+
+.Navbar-transparent {
+    position: absolute;
+}
+
+.Navbar-solid{
+    position: static;
+    background-color: black;
 }
 
 .nav-flex2 {
