--- a/src/components/SignIn/Form/FormSI.css
+++ b/src/components/SignIn/Form/FormSI.css
@@ -1,9 +1,13 @@
 .right {
-    height: 85vh;
-    background-image: url('../../../public/assets/img/backSign.jpg');
-    background-color: rgba(0, 0, 0, .7);
+    background-image: url("https://i.imgur.com/1Q1Z1Zm.jpg");
     background-size: cover;
-    background-attachment: fixed;
-    background-blend-mode: color;
-    width: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
+    width: 50%;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 1;
+    transition: 1s;
 }
