--- a/src/pages/Chat/Chat.css
+++ b/src/pages/Chat/Chat.css
@@ -1,10 +1,23 @@
 .Stream-container {
-
+  height: 80vh;
+}
+.iframe-container {
+  overflow-y: auto;
+  height: 80vh;
+  width: 100%;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
+  background-color: black;
+}
+.Chat-iframe {
+  width: 100%;
+  height: 80vh;
 }
 .Chat-container {
   max-width: 400px;
   width: 100%;
-  height: 800px;
+  height: 80vh;
   background-color: #18181B;
   position: relative;
   display: flex;
@@ -14,7 +27,7 @@
 .Chat {
   max-width: 400px;
   flex-grow: 1;
-  max-height: 80%;
+  
   overflow-y: auto;
   word-wrap: break-word;
 }
