--- a/src/pages/Chat/Chat.css
+++ b/src/pages/Chat/Chat.css
@@ -2,7 +2,7 @@
   height: 80vh;
 }
 .iframe-container {
-  overflow-y: auto;
+  overflow-y: hidden;
   height: 80vh;
   width: 100%;
   justify-content: center;
