--- a/src/pages/ArtistDetail/ArtistDetail.css
+++ b/src/pages/ArtistDetail/ArtistDetail.css
@@ -9,6 +9,11 @@
 .concert-link{
    color: aliceblue;
 }
+
+.text-up{
+   color: purple;
+}
+
 .concert-link:hover{
    cursor: pointer;
    color: var(--main-color);
