Barra admin responsiva

--- a/src/layouts/Admin/AdminNav/AdminNav.css
+++ b/src/layouts/Admin/AdminNav/AdminNav.css
@@ -3,4 +3,16 @@
   height: 100%;
   width: 300px;
   overflow-y: auto;
+  
+  display: flex;
+  flex-direction: column;
 }
+@media (max-width: 768px) {
+  .AdminNav {
+    padding-top: 60px;
+    width: 100%;
+    position: absolute;
+  }
+}
+
+  
